--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1558,7 +1558,7 @@ body .layui-layer-we{
 .layui-input, .layui-select, .layui-textarea,.layui-form-label,.layui-input-inline,.xm-input,.xm-select{
     height: 30px !important;
     line-height: 30px !important;
-    padding: 2px !important;
+    /*padding: 2px !important;*/
 }
 
 .layui-field-title {
@@ -1590,7 +1590,9 @@ tr>td.tdright .layui-input,tr>td.tdright .layui-select,tr>td.tdright .layui-text
     background: #f4f6b4;
 }
 
-
+.body-form{
+    margin-bottom: 50px;
+}
 
 
 
