--- a/application/admin/view/fields/index.html
+++ b/application/admin/view/fields/index.html
@@ -190,6 +190,7 @@
             table : "rule",
             tableid : "tableReload",
             form:$("form#formRule"),
+            is_display:true,
             tableCommon: tableCommon,
             extend : {
                 "add_url": "{:url('admin/fields/add','',false)}",
