--- a/application/admin/view/fields/add.html
+++ b/application/admin/view/fields/add.html
@@ -97,7 +97,7 @@
                     </tbody>
                 </table>
                 <div class="layui-form-item footer-form">
-                    <div class="footer">
+                    <div class="footer footer-common">
                         <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
                         <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
                         <button type="reset" class="layui-btn layui-btn-sm btn-embossed go-back" onclick="window.history.go(-1)">返回</button>
