--- a/application/admin/view/fields/index.html
+++ b/application/admin/view/fields/index.html
@@ -194,7 +194,7 @@
             tableCommon: tableCommon,
             extend : {
                 "add_url": "{:url('admin/fields/add','',false)}",
-                "edit_url": "{:url('admin/fields/edit','',false)}/ids/",
+                "edit_url": "{:url('admin/fields/add','',false)}/ids/",
                 "del_url": "{:url('admin/fields/del','',false)}",
                 "export_url" : "{:url('admin/fields/index','',false)}"
             }
