--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -11,7 +11,8 @@ html #layuicss-layuiAdmin {
 
 html {
     background-color: #f2f2f2;
-    color: #666
+    /*color: #666*/
+    color: #333333;
 }
 
 .layadmin-tabsbody-item, [template] {
@@ -533,9 +534,9 @@ html {
 
 .layadmin-pagetabs .layui-tab-title li.layui-this, .layadmin-pagetabs .layui-tab-title li:hover {
     /*background-color: #f6f6f6;*/
-    background: #2f4050;
+    background: #2F4056;
     /*background: #009688;*/
-    color: #a7b1c2;
+    color: #ffffff;
 }
 
 .layadmin-pagetabs .layui-tab-title li.layui-this:after {
@@ -1580,32 +1581,123 @@ tr>td.tdleft .tips{
 
 tr>td.tdright {
     text-align: left;
-    background: #ffffff !important;
+    background: #F5F5F5 !important;
     vertical-align: middle;
     /*display: inline-block;*/
     /*position: relative;*/
 }
 tr>td.tdright .layui-input,tr>td.tdright .layui-select,tr>td.tdright .layui-textarea {
     width: 320px;
-    background: #f4f6b4;
+    background: #f5f7bb;
+    /*background: #ffffff;*/
 }
 
 .body-form{
     margin-bottom: 50px;
 }
 
+.footer-common{
+    padding-left: 25%; !important;
+    text-align: left !important;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.layui-form-select,.layui-select-title{
+    width: 320px;
+}
+.layui-tab-content{
+    padding: 0 !important;
+}
+.tabpage {
+    overflow: hidden;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.tabpage li {
+    float: left;
+    margin: 0 .5em 0 0;
+    line-height:10px;
+}
+.tabpage a {
+    position: relative;
+    background: #ddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
+    background-image: -webkit-linear-gradient(top, #fff, #ddd);
+    background-image: -moz-linear-gradient(top, #fff, #ddd);
+    background-image: -ms-linear-gradient(top, #fff, #ddd);
+    background-image: -o-linear-gradient(top, #fff, #ddd);
+    background-image: linear-gradient(to bottom, #fff, #ddd);
+    /*padding: .7em 3.5em;*/
+    padding: .7em .7em;
+    float: left;
+    text-decoration: none;
+    /*color: #444;*/
+    color: #999;
+    /*text-shadow: 0 1px 0 rgba(255, 255, 255, .8);*/
+    -webkit-border-radius: 5px 0 0 0;
+    -moz-border-radius: 5px 0 0 0;
+    border-radius: 5px 0 0 0;
+    -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
+    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
+}
+.tabpage a:hover, .tabpage a:hover::after, .tabpage a:focus, .tabpage a:focus::after {
+    background: #fff;
+}
+.tabpage a:focus {
+    outline: 0;
+}
+.tabpage a::after {
+    content:'';
+    position:absolute;
+    z-index: 1;
+    top: 0;
+    right: -.5em;
+    bottom: 0;
+    width: 1em;
+    background: #ddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
+    background-image: -webkit-linear-gradient(top, #fff, #ddd);
+    background-image: -moz-linear-gradient(top, #fff, #ddd);
+    background-image: -ms-linear-gradient(top, #fff, #ddd);
+    background-image: -o-linear-gradient(top, #fff, #ddd);
+    background-image: linear-gradient(to bottom, #fff, #ddd);
+    -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+    -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
+    -webkit-transform: skew(10deg);
+    -moz-transform: skew(10deg);
+    -ms-transform: skew(10deg);
+    -o-transform: skew(10deg);
+    transform: skew(10deg);
+    -webkit-border-radius: 0 5px 0 0;
+    -moz-border-radius: 0 5px 0 0;
+    border-radius: 0 5px 0 0;
+}
+.tabpage .currenttab a, .tabpage .currenttab a::after {
+    /*background: #fff;*/
+    background: #2F4056;
+    z-index: 3;
+    color:#ffffff;
+}
+.contenttab {
+    /*background: #fff;
+    padding: 2em;*/
+    padding: .5em;
+    /*height: 220px;*/
+    position: relative;
+    z-index: 2;
+    -moz-border-radius: 0 5px 5px 5px;
+    -webkit-border-radius: 0 5px 5px 5px;
+    border-radius: 0 5px 5px 5px;
+    -moz-box-shadow: 0 -2px 3px -2px rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 -2px 3px -2px rgba(0, 0, 0, .5);
+    box-shadow: 0 -2px 3px -2px rgba(0, 0, 0, .5);
+}
+.contenttab h2, .contenttab h3, .contenttab p {
+    margin: 0 0 15px 0;
+}
 
 
 
